@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-07-19 11:06:44 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-100
+
+    Summary:
+      html, finish list of boolean attributes
+    Revision:
+      itools--main--0.9--patch-100
+
+
+    modified files:
+     Changelog html/parser.py
+
+
 2005-07-16 18:05:14 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-99
 
     Summary:
